--- a/my-product-next-project-1/styles/globals.css
+++ b/my-product-next-project-1/styles/globals.css
@@ -22,3 +22,9 @@
 .cardImg:hover{
     opacity: 1;
 }
+.sticky-top{
+    /* position: relative; */
+    position: sticky;
+    z-index: 999;
+    top: 0px;
+}
