--- a/my-product-next-project-1/styles/globals.css
+++ b/my-product-next-project-1/styles/globals.css
@@ -20,6 +20,9 @@
     padding-bottom: 40px;
 
 }
+/* .disabled-class:disabled{
+color: #fff;
+} */
 
 .bg-white{
     background-color: antiquewhite;
